# estrutura-de-dados

./: .gitignore  README.md
Estrutura de Dados I/Estrutura-De-Dados-P1/projeto-ATUAL/: bootstrap.bat
Estrutura de Dados I/Estrutura-De-Dados-P2/: CMakeLists.txt
Estrutura de Dados II/Atividade N1/: CMakeLists.txt
Estrutura de Dados II/Atividade-AVL/: AVL.cpp  AVL.h  CMakeLists.txt  Makefile.win  NodeAVL.cpp  NodeAVL.h  Produto.cpp  Produto.h  Utils.h  avlProject.dev  mainAVL.cpp
Estrutura-De-Dados-P1/: CMakeLists.txt  Estrutura-De-Dados.dev  Estrutura-De-Dados.layout
Estrutura-De-Dados-P1/Estrutura-De-Dados-P1/: Errors.h  Estrutura-De-Dados.layout  Makefile.win  Pilha.cpp  Pilha.h  Programa.cpp  Programa.h
Estrutura-De-Dados-P1/Estrutura-De-Dados-P1/src/: Errors.h  Pilha.h  Programa.cpp  Programa.h
Estrutura-De-Dados-P1/projeto-ATUAL/: CMakeLists.txt  Estrutura-De-Dados-P1.dev  Makefile.win  Pilha.h  projetoFinal.cpp
Estrutura-De-Dados-P1/projeto-ATUAL/src/: Calculadora.cpp  Calculadora.h  Pilha.cpp  Pilha.h  ProjetoFinal.cpp  ProjetoFinal.h
Estrutura-De-Dados-P1/projeto-FAIL/: CMakeLists.txt  Makefile.win
Estrutura-De-Dados-P1/projeto-FAIL/src/: CalculadoraDePilha.h  Errors.h
Estrutura-De-Dados-P1/src/: Calculadora.cpp  Calculadora.h  CalculadoraDePilha.h  Errors.h  Pilha.cpp  Pilha.h  Programa.cpp  Programa.h
Estrutura-De-Dados-P2/: CMakeLists.txt
Estrutura-De-Dados-P2/data/: df_covid.csv
Estrutura-De-Dados-P2/src/: Fila.h  Lista.cpp  Lista.h  Makefile.win  Paciente.cpp  Paciente.h  df_covid.csv  main.cpp  main.h  p2.dev  p2.layout
(+39 files in other folders)
